--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -89,9 +89,11 @@
 }
 
 .admin-navbar-title-main {
-  font-size: 18px;
-  font-weight: 800;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
 }
+
 
 .admin-navbar-title-sub {
   font-size: 12px;
@@ -220,9 +222,11 @@
 }
 
 .admin-table-title {
-  font-size: 14px;
-  font-weight: 800;
+   font-size: 14px;
+  font-weight: 600;
+  margin: 0;
 }
+
 
 .admin-table-sub {
   font-size: 11px;
@@ -282,7 +286,8 @@
 
 .admin-activity-title {
   font-size: 14px;
-  font-weight: 800;
+  font-weight: 600;
+  margin: 0;
 }
 .admin-activity-sub {
   font-size: 11px;
